Fixed repo name mismatch

--- a/3. upload_to_huggingface.ipynb
+++ b/3. upload_to_huggingface.ipynb
@@ -2,22 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"HF_TOKEN\"] = \"hf_xxxxxxxxxx\""
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "_ = load_dotenv(find_dotenv())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from huggingface_hub import create_repo\n",
-    "create_repo(\"stefanodangelo/chart-binary-classification\")"
+    "try:\n",
+    "    create_repo(\"stefanodangelo/chartdet\")\n",
+    "except:\n",
+    "    pass # repo already created"
    ]
   },
   {
@@ -30,18 +34,11 @@
     "api = HfApi()\n",
     "api.upload_file(\n",
     "    path_or_fileobj=r\"models\\chart_detection_model.pt\",\n",
-    "    path_in_repo=\"models/chart_detection_model.pt\",\n",
+    "    path_in_repo=\"chart_detection_model.pt\",\n",
     "    repo_id=\"stefanodangelo/chartdet\",\n",
     "    repo_type=\"model\",\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
